<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_title">示例代码</string>
    <string name="base_function">基本功能</string>
    <string name="hud_title">HUD显示</string>
    <string name="extend_title">扩展功能</string>
    <string name="extend_navi_navi">自定义导航</string>
    <string name="navibar_title">路径规划</string>
    <string name="navi_car">驾车</string>
    <string name="navi_foot">步行</string>
    <string name="start_hud_navi">HUD显示</string>
    <string name="complex_function">综合展示</string>
    <string name="navi_empty_car">"驾   车"</string>
    <string name="navi_empty_foot">"步   行"</string>
    <string name="navi_start">"起    点"</string>
    <string name="navi_middle">途经点</string>
    <string name="navi_end">"终    点"</string>
    <string name="navi_strategy">"策    略"</string>
    <string name="navi_route">路径规划</string>
    <string name="navi_navi">模拟导航</string>
    <string name="start_navi_navi">实时导航</string>
    <string name="navi_strategy_speed">速度最快</string>
    <string name="navi_strategy_cost">避免收费</string>
    <string name="navi_strategy_distance">距离最短</string>
    <string name="navi_strategy_nohighway">不走高速快速路</string>
    <string name="navi_strategy_timenojam">时间最短且躲避拥堵</string>
    <string name="navi_strategy_costnojam">避免收费且躲避拥堵</string>
    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>
    <string name="setting">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="yes">"  是  "</string>
    <string name="no">"  否  "</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="daynightmode">"昼夜模式    "</string>
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="jamrecalculation">"拥堵重算    "</string>
    <string name="trafficbroadcast">"交通播报    "</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="screenon">"屏幕常亮    "</string>
    <string name="routeshow">线路展示</string>
    <string name="tapmap">点击地图设置</string>
    <string name="starttapmap">我的位置（可点击地图设置）</string>
    <string name="walkdescription">步行状态不可用</string>
    <string name="routeinfo">全程   --公里/--分钟    收费 --元</string>
    <string name="routeinfo_1">全程 </string>
    <string name="routeinfo_2">公里/</string>
    <string name="routeinfo_3">"分钟    收费"</string>
    <string name="routeinfo_4">元</string>
    <string name="routeinfo_default">--</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="mypoistion">我的位置</string>
    <string name="mappoistion">地图点选</string>
    <string name="positioninfo">位置信息</string>
    <string-array name="preference_values_tts_role">z
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>vixq</item>
        <item>vixf</item>
        <item>vixm</item>
        <item>vixl</item>
        <item>vixr</item>
        <item>vixyun</item>
        <item>vixk</item>
        <item>vixqa</item>
        <item>vixying</item>
        <item>vixx</item>
        <item>vinn</item>
        <item>vils</item>
    </string-array>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>
    <string name="poi_input_type_start">从</string>
    <string name="poi_input_type_dest">到</string>
    <string name="poi_input_type_mid">经</string>
    <string name="navi_guide_from">出发</string>
    <string name="navi_guide_end">到达终点</string>
    <string name="drawer_open">开</string>
    <string name="drawer_close">关</string>
    <string name="navi_ui">智能公交导航类型</string>
    <string name="blank"></string>
    <string name="navi_start_end_poi_calculate_title">起终点算路</string>
    <string name="navi_start_end_poi_calculate_desc">包含起点和终点的组件算路</string>
    <string name="navi_end_poi_calculate_title">无起点算路</string>
    <string name="navi_end_poi_calculate_desc">无起点有终点的组件算路</string>
    <string name="navi_bywayof_poi_calculate_title">途经点算路</string>
    <string name="navi_bywayof_poi_calculate_desc">有途经点的组件算路</string>
    <string name="navi_ui_navi_title">组件直接导航</string>
    <string name="navi_ui_navi_desc">组件直接导航</string>
    <string name="navi_ui_component_theme_title">起始点算路</string>
    <string name="navi_ui_component_theme_desc">起始点算路</string>
    <string name="navi_route_line">路径规划</string>
    <string name="navi_route_driver_title">驾车路径规划</string>
    <string name="navi_route_driver_desc">驾车路径规划</string>
    <string name="navi_route_walk_title">步行路径规划</string>
    <string name="navi_route_walk_desc">步行路径规划</string>
    <string name="navi_route_ride_title">骑行路径规划</string>
    <string name="navi_route_ride_desc">骑行路径规划</string>
    <string name="navi_route_trunk_title">货车导航路径规划</string>
    <string name="navi_route_trunk_desc">货车导航路径规划</string>
    <string name="navi_type">多类型导航</string>
    <string name="navi_type_gps_title">实时导航</string>
    <string name="navi_type_gps_desc">实时导航</string>
    <string name="navi_type_inner_voice">内置语音导航</string>
    <string name="navi_type_trunk">货车导航</string>
    <string name="navi_type_emu_title">模拟导航</string>
    <string name="navi_type_emu_desc">模拟导航</string>
    <string name="navi_type_intelligent_title">智能巡航</string>
    <string name="navi_type_intelligent_desc">智能巡航</string>
    <string name="navi_type_hud_title">HUD导航</string>
    <string name="navi_type_hud_desc">HUD导航</string>
    <string name="navi_ui_custom">导航UI自定义</string>
    <string name="navi_ui_custom_car_icon">自定义车标</string>
    <string name="navi_ui_custom_route">自定义路线UI</string>
    <string name="navi_ui_custom_route_style">自定义路线纹理</string>
    <string name="navi_ui_custom_trun_across_tip">自定义路口转向提示</string>
    <string name="navi_ui_custom_northmode">正北模式</string>
    <string name="navi_ui_custom_wholescan_button">自定义全览模式</string>
    <string name="navi_ui_custom_compass">自定义指南针</string>
    <string name="navi_ui_custom_traffic_button">自定义路况按钮</string>
    <string name="navi_ui_custom_zoom_button">自定义放大缩小按钮</string>
    <string name="navi_ui_custom_across_overlay">自定义路口放大图</string>
    <string name="navi_ui_custom_traffic_bar">自定义导航光柱</string>
    <string name="navi_ui_custom_traffic_bar_new">自定义导航光柱(new)</string>
    <string name="navi_ui_custom_route_select">自定义道路选择</string>
    <string name="navi_expand">导航扩展</string>
<string name="app_name">爱宠大机密</string>
    <string name="register">Register</string>
    <string name="register_name">UserName</string>
    <string name="register_password">Password</string>
    <string name="register_nickname">NickName</string>
    <string name="register_email">E-Mail</string>
    <string name="register_telephone">MobilePhone</string>
    <string name="change_formation">ChangeInformation</string>
    <string name="change">Change</string>
    <string name="ad02">关于养宠物这件事</string>
    <string name="ad002">2019年1月10日</string>
    <string name="ad022">  据个人喜好，选择适合的宠物相伴一生♥️
我曾经看过一段话大概是这么个意思：当你幸福的时候，你自身条件允许的情况下，养一个宠物，会让两个人的幸福指数上升一个档次；当你是单身生活时候，宁可养个宠物，也不要让自己长期适应一个人的生活。
--------------------------------------------------------
    我认为养宠物要有具备以下条件：
  1⃣️时间：要有足够的时间陪着他，你会有很多的朋友，亲人，但是从他来到你身边，他只有你一个；狗狗不论大小，打完疫苗后，是需要每天出去遛弯的，遛弯的目的有两个解决大小便和增加运动量，特别是大型犬，不然他会有多余的精力给你拆家
  2⃣️耐心：宠物狗是要训的，最基本的坐、卧、握手、在固定点大小便、不乱吠叫、自己进犬舍、不往身上扑、不讨食、坐在指定地点不动、跟随散步、卧在指定地点不动、一招即来等；最重要的一点，毛孩子的破坏力
  3⃣️经济承受能力：例如小型犬泰迪、比熊、雪纳瑞、约克夏、博美等小型犬会相对轻松一些，狗狗本身小，吃的也不多，花钱大多在美容、零食等上面；例如大型犬金毛、拉布拉多、萨摩耶、阿拉斯加、哈士奇等，狗粮会随着毛孩子的长大，量会越来越多，除此之外还有必要的鸡胸肉、胡萝卜、益生菌、钙片、磨牙棒、定期的洗澡等都是一笔不小的开销
 ❗不要以没想到养狗这么费钱、太皮了、不听话和没时间照顾为理由：
      ⚠根据自己的情况选择宠物，选择大型犬就要做好心里准备，经济富裕有富裕的养法，拮据有拮据的养法，贵的狗粮承受不住，那就便宜点的狗粮，再不舍得花钱，那就馒头，面条，只要不是咸的都可以，他们不会嫌弃，只要你别抛弃他；幼犬小时候要吃钙片、羊奶粉等，大一点的幼犬，要有磨牙棒，小零食，益生菌等，最大的一笔开销除了狗粮，就是洗澡和驱虫，驱虫有分体内驱虫和体外驱虫，洗澡根据体重，大小的不同价格不一，大型犬的价格随着长大，往往是只增不减，冬天至少一月一次，夏天至少一月两次，要等到狗狗身上有味的时候马上去洗，不能太频繁也不能时间太长。
      ⚠狗狗的一岁相当于人的7岁，一岁以下都是小孩子脾气，不听话就要挨打，这不是虐待，不要不舍得，是要让他长记性，但是也不能忘死里打。
      ⚠如果你是上班族
可乐咬坏了我十几双鞋子、数不清的卫生纸、垃圾筐、还有桌子的边，墙纸，还有过年的压岁钱，你说这些能不生气吗，便宜的东西倒也无所谓不心疼，但是贵的鞋子能不心疼吗？我的解决办法是：鞋子放在他够不到地方，多给他买玩具，绳球，会发声的毛绒玩具最好是细长型的，能够磨牙的软骨头，某宝上很多而且很便宜；茶几桌子上不放任何东西，纸巾放在抽屉里，卫生间锁门；有问题就有解决的办法。
 ❗不要以扰民、周围邻居不同意为理由
  在选宠物之前，你要考虑好，小型犬爱叫唤，大型犬不怎么叫唤，偶尔也就几声，小型犬天天叫都没事，大型犬又怎么会扰民呢？我家可乐，快八个月了我几乎没有听见他的叫声，也就只是嗯哼几声。
出门遛的时候，绳子一直不撒手，一个是不能撒手，年纪小撒手没也不安全，另一个是怕吓到别人，特别是老人和小孩；我基本都是勒着脖子走，万一他激动，我也能够及时拽回来，只有到了人不多的地方，我才会把绳子放长，养宠物的知道自己家的狗不咬人，但是其他人不养狗的不知道啊，特别是大型犬，实际是很温顺的，但是因为体型大，一扑，一张嘴就害怕，只要你不逗他，别惹他，他就不会扑你或者攻击你，也就不会出现所谓的狗咬人事件了，一个巴掌拍不响。
周围很多朋友包括宠物医生都是说大型犬特别是金毛和拉布拉多喜欢扑人，其实他是想和你玩，张嘴也不是想咬你，</string>
    <string name="ad04">柴犬的护理要点</string>
    <string name="ad004">2017年10月11日</string>
    <string name="ad044">                                        四季护理
一、柴犬春季护理知识
    春季是柴犬发情、交配、繁殖和换毛的季节。要注意发情犬的管理，梳理被毛，预防皮肤病。犬在发情期间，其生理功能和行为常会发生一些特殊的改变。发情母犬会到处乱走，要看管不好，不可任其外出自由交配，尤其是优良的纯种犬，以防品种退化。公犬常为争夺配偶而争斗，易受伤，发现伤情要及时处理。
    春季也是换毛季节。厚实的冬季毛将要脱落，如不及时经常地梳理，不洁的皮肤会引起瘙痒，犬会以抓挠和摩擦身体来消除痒感，这就将容易将皮肤弄破，宜引起细菌感染。不洁的被毛易擀毡，为体外寄生虫和真菌的繁殖提供有利场所，引起皮肤病。因此春季应注意被毛的梳理和清洁预防皮肤病。
二、柴犬秋季护理知识
    秋季犬体内代射旺盛，食欲大增，采食量增加，夏毛开始脱落，秋毛开始长出，同时又是一年中第二个繁殖季节，其管理方法与春季有许多相似之处。秋季食物丰盛，给食量要增加，质量要提高，为过冬作好体质方面的储备工作。注意梳理被毛，以促进冬毛的生长。深秋之际昼夜温差大，应作好晚间犬舍的保温工作，防止感冒。
三、柴犬冬季护理知识
    天气寒冷，管理的重点应方在防寒保温，预防呼吸道疾病方面。由于气温降低，机体受寒冷空气袭击，或因管理不当，不注意防寒保温，运动后被雨淋风吹以及犬舍潮湿等都会引起感冒，严重的会继发气管炎、肺炎等呼吸道疾病。预防感冒的有效措施就是防寒保温，加厚垫褥，并及时更换，保持干燥，防止贼风；在天情日暖的时侯，家强户外运动，以增强体质，提高抗病能力。晒台阳不仅可取暖，阳光中的紫外线还有消毒杀菌的功效，并能促进钙质的吸收，有利于骨骼的生长发育，防止仔犬发生佝偻病。
四、柴犬夏季护理知识
    空气潮湿，气候炎热，应注意防暑、防潮、预防食物中毒。犬在气温高，湿度大的环境中，由于体热散发困难，极易中暑。为此，应避免在烈日下活动，犬舍应设在阴凉处，炎热天气应经常为犬进行冷水浴。发现犬出现呼吸困难、皮温增高、心跳加速等症状时，应赶快用湿冷毛巾冷敷头部，移到阴凉通风处，并立即请兽医治疗。为防潮湿，要勤换、勤晒垫辱等铺垫物，用水冲洗犬舍后，一定要待彻底晾干后方能进犬，被雨水淋湿后的犬要及时用毛巾揩干。
    夏季柴犬的饲料易发酵、变质，容易引起食物中毒。因此，喂犬的食物最好是经加热处理后防凉的新鲜食物，喂给量要适当，不应有剩余。对已发孝变质的食物要坚决到掉，不能怕浪费而留用。因为变质食物中可能含有细菌毒素，即使高温处理也不可能将其破坏。犬吃了含有毒素的食物，即可引起食物中毒，如治疗不及时会死亡。故每当喂食后不久，若发现犬有呕吐、腹泻，全身衰弱症状时，应迅速请兽医诊疗。
    夏季气温高，易出现食欲减退，此时应减少肉食，增加新鲜蔬菜和肉汤或适当改变饲料种类，多供给清水。另外，应经常注意清洗眼睛和耳朵，防止皮肤湿疹。</string>
    <string name="ad03">接种疫苗后需要注意什么</string>
    <string name="ad003">2018年9月1日</string>
    <string name="ad0333"> 接种疫苗后需要注意什么

1.由于疫苗本身也是弱病毒, 产生免疫力是在狗狗健康的基础上。如果狗狗接种疫苗的时候免疫力下降或者建康出现问题,那么疫苗不仅不能使狗狗产生免疫力,还可能会导致狗狗的病情加重。所以在接种疫苗之前,一定要给狗狗做健康检查。

2.- 定要去正规的宠物医院请专业的宠物医生为狗狗接种疫苗,那些非正规的宠物诊所无论是疫苗来源还是专业水平都难以保证,为了爱犬一定要选择正规医院接种。

3.狗狗在接种疫苗以后，一般抵抗力会先 下降在上升,所以在接种疫苗一周内最好不要给狗狗洗澡，也要避免此时给狗狗换环境或者带到户外去。

4.接种疫苗之后一周内,要避免给狗狗口服抗生素,驱虫药等药物,否则可能会导致免疫失败。
5.在狗狗换了新环境的半个月后,待狗狗完全适应新环境再接种疫苗。
6.接种疫苗之后有的狗狗会出现食欲不振、体温升高、精神不佳的症状,不要惊慌,多注意观察,这种症状一般在2个小时左右就会消失。 如持续时间较长,要及时带到宠物医院诊治。</string>
    <string name="ad033">狗狗接种疫苗的年龄和流程

      1.幼犬

      幼犬出生后从母乳内能够获取母体的免疫抗体,为确保避免母源抗体的干扰，幼犬在6周龄后可以进行首次接种,之后每隔3周接种1次每次一针,连续接种3次。

      待3次疫苗接种完毕之后,最好间隔-周再接种一针狂犬疫苗,狂犬疫苗需要在狗狗3月龄以上方可接种。以后，每年需接种一次疫苗加一次狂犬疫苗。

      2.没有接种过疫苗的成年犬

      对于从来没有接种过疫苗的成年犬,可以选择接种一针或者两针六联疫苗加一针狂犬疫苗。如需接种两针疫苗，那么两针之间最好间隔3周。在接种之前要对狗狗进行身体检查,按照兽医的建议接种。</string>
    <string name="weibosdk_demo_feature_oauth">微博授权</string>
    <string name="weibosdk_demo_feature_share">分享到微博</string>
    <string name="weibosdk_demo_feature_upload_log">上传统计日志</string>
    <string name="text_tile">标题：</string>
    <string name="edit_hint">请输入标题</string>
    <string name="edit_body_hint">请输入内容...</string>
    <string name="edit_title_time_hint">这里显示时间</string>
    <string name="str_upcoming">待办</string>
    <string name="str_notice">提醒</string>
</resources>