<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_theme_yellow"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/change_formation"
        android:textColor="@color/register"
        android:textSize="20dp"
        android:background="@color/title_first"/>
    <TextView
        android:gravity=""
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/register_name"
        android:background="@color/back_theme_yellow"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/register_editor"
        android:id="@+id/change_username"/>

    <TextView
        android:gravity=""
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/register_nickname"
        android:background="@color/back_theme_yellow"/>
    <EditText
        android:id="@+id/change_nickname"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/register_editor"/>
    <TextView
        android:gravity=""
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/register_email"
        android:background="@color/back_theme_yellow"/>
    <EditText
        android:id="@+id/change_e_mail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/register_editor" />
    <TextView
        android:gravity=""
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/register_telephone"
        android:background="@color/back_theme_yellow"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/register_editor"
        android:phoneNumber="true"
        android:id="@+id/change_phone"/>
    <Button
        android:id="@+id/change_button"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/turn_in_btn"
        android:text="@string/change"
        android:textColor="@color/turn_in_text"
        android:onClick="changeButtonHandler"/>
</LinearLayout>
