<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/back_theme_yellow">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="#51ede3b7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/ad03"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/ad003"
                android:textSize="17dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="21dp"
                android:text="@string/ad033"/>
<ImageView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:src="@drawable/dog2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="21dp"
                android:text="@string/ad0333"/>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:src="@drawable/dog3"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
