<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/back_theme_yellow">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="#51ede3b7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/ad04"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/ad004"
                android:textSize="17dp"
                android:gravity="center"/>
<ImageView
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:src="@drawable/dog4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="21dp"
                android:text="@string/ad044"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
