<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/back_theme_yellow">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="#51ede3b7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/ad02"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/ad002"
                android:textSize="17dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:src="@drawable/dog1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ad022"
                android:textSize="21dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
