<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/back_theme_yellow"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_marginTop="40dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app_main_logo"/>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:typeface="monospace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/login_text"
                android:textSize="40dp"/>
            <TextView
                android:layout_marginTop="20dp"
                android:typeface="monospace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="打开物流的新方式"
                android:textColor="@color/login_text"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/feature_oauth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="20dp"
            android:onClick="onOauth"
            android:text="@string/weibosdk_demo_feature_oauth" />

        <Button
            android:id="@+id/feature_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/weibosdk_demo_feature_share" />
        <Button
            android:id="@+id/feature_story"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="分享到微博故事" />

        <Button
            android:id="@+id/feature_upload_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/weibosdk_demo_feature_upload_log" />

        <Button
            android:id="@+id/goto_weibo_page"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="连接到微博" />
    </LinearLayout>


</LinearLayout>